# Vibeathon_new-main

./: .env  .env.example  .gitignore  .replit  .vercelignore  DEPLOYMENT.md  DISK_QUOTA_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  PRODUCTION_CHECKLIST.md  PYTHON_BACKEND.md  QUICKSTART.md  README.md  SECURITY_SUMMARY.md  TESTING.md  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.nix  requirements-full.txt  requirements.txt  start_python_backend.sh  vite.config.ts
.kreuzberg/ocr/: 01de89220142ab1a.msgpack  01f0be86064a4fa3.msgpack  02c7edd9acd3d669.msgpack  031e8bfdea7dbfa0.msgpack  045442dfb35434a0.msgpack  05b88780f4ce2f84.msgpack  084b6c14f7f0be1f.msgpack  0884581e11ca8a48.msgpack  08bf6ea8e40dd56c.msgpack  094dccd51d55316f.msgpack  0b5d718f411fd708.msgpack  0d24063f09f2e0e5.msgpack  0d631e8792a6c39c.msgpack  0e35974ea6295bed.msgpack  0f170fdfb302d32f.msgpack  0f31448e625105f7.msgpack  0f3b1bc589e5606b.msgpack  0fce64c901a419a9.msgpack  11dc1e720adbaa34.msgpack  128e27f31191ff73.msgpack  12cf74c2586f76fd.msgpack  1477caf72f99cb74.msgpack  1709f232a5707edd.msgpack  19a205dd2f7702ce.msgpack  1b05b70cd0df6eb5.msgpack  1b1bca8ac54f7488.msgpack  1b2d42c5e1cc8515.msgpack  1cbd06cd3f2207cf.msgpack  1ece03de239a45e4.msgpack  220b55b507ecbcd0.msgpack  22a73e4301c61bfc.msgpack  2316218dab7e0997.msgpack  258c99d8710499e7.msgpack  264fbfb02ba3bd9c.msgpack  26bad9f15ef29983.msgpack  26c5e9e431cc92ac.msgpack  2784aab83019b1c1.msgpack  2785f315850dd59a.msgpack  2817ac4d5af7faf1.msgpack  2972d448b8784cd2.msgpack  (+184 more)
attached_assets/: Pasted-You-are-Replit-AI-Build-a-production-ready-full-stack-web-app-called-Agentverse-Study-Buddy-that-d-1762543802320_1762543802321.txt
client/src/pages/: Learn.tsx  Practice.tsx
pdfExtraction/: README.md  extract_pdf.py  main.py  requirements.txt  setup.sh  summarizer.py
python_backend/: agents.py  config.py  core_agents.py  database.py  enums.py  env_check.py  main.py  models.py  prompts.py  rag.py
python_backend/agents/: __init__.py  evaluator.py  orchestrator.py  placement.py  planner.py  quizgen.py  scheduler.py  teacher.py
python_backend/models/: __init__.py  document.py  flashcard.py  quiz.py  topic.py  user.py
python_backend/services/: __init__.py  anthropic.py  flashcards.py  ingest.py  judge0.py  sm2.py  youtube.py
server/: routes.ts
shared/: schema.ts
test/: test-pdf-extraction.mjs
