[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
chromadb = "^0.5.3"
sentence-transformers = "^3.0.1"
google-api-python-client = "^2.138.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
google-generativeai = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
