[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
chromadb = "^0.5.3"
sentence-transformers = "^3.0.1"
google-api-python-client = "^2.138.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
google-generativeai = "^0.5.4"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
python-magic = "^0.4.27"
pillow = "^10.3.0"
websockets = "^12.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
