[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
google-generativeai = "^0.5.4"
websockets = "^12.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Optional dependencies for document processing features
chromadb = {version = "^0.5.3", optional = true}
sentence-transformers = {version = "^3.0.1", optional = true}
google-api-python-client = {version = "^2.138.0", optional = true}
pytesseract = {version = "^0.3.10", optional = true}
pdf2image = {version = "^1.17.0", optional = true}
python-magic = {version = "^0.4.27", optional = true}
pillow = {version = "^10.3.0", optional = true}

[tool.poetry.extras]
full = ["chromadb", "sentence-transformers", "google-api-python-client", "pytesseract", "pdf2image", "python-magic", "pillow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
